--- a/templates/smbldap_bind.conf.erb
+++ b/templates/smbldap_bind.conf.erb
@@ -7,7 +7,7 @@
 # master ldap for writing access and a slave ldap server for reading access
 # By default, we will use the same DN (so it will work for standard Samba
 # release)
-slaveDN="<%= @readbinddn %>
-slavePw="SLAVEPW"
-masterDN="<%= @writebinddn %>
-masterPw="MASTERPW"
+slaveDN="<%= @readbinddn %>"
+slavePw="<%= @password %>"
+masterDN="<%= @writebinddn %>"
+masterPw="<%= @password %>"
